--- a/StockBot/StockBot.csproj
+++ b/StockBot/StockBot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.7.0-RC4" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
 </Project>
