--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,37 +1,23 @@
-version: "2"
-
+version: "3.6"
 services:
-  zookeeper:
-    image: docker.io/bitnami/zookeeper:3
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
     ports:
-      - "2181:2181"
+        - 5672:5672
+        - 15672:15672
     volumes:
-      - "zookeeper_data:/bitnami"
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-  kafka:
-    image: docker.io/bitnami/kafka:2
-    ports:
-      - "9092:9092"
-    volumes:
-      - "kafka_data:/bitnami"
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
-      - ALLOW_PLAINTEXT_LISTENER=yes
+        - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+        - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+  chat-server:
+    build: "../ChatServer"
+    ports: 
+      - "80:80"
+    restart: on-failure
     depends_on:
-      - zookeeper
-  kafka-manager:
-    image: docker.io/sheepkiller/kafka-manager:alpine
-    ports:
-      - "9000:9000"
-    environment:
-      - ZK_HOSTS=zookeeper:2181
-      - APPLICATION_SECRET=secretpassword
-
-volumes:
-  zookeeper_data:
-    driver: local
-  kafka_data:
-    driver: local
+      - rabbitmq
+  stock-bot:
+    build: "../StockBot"
+    restart: on-failure
+    depends_on:
+      - rabbitmq
